# evolution

./: .gitignore  CMakeLists.txt  README.md  main.py  main_old.py  mut_test.py  myCreature.py  requirements-old.txt  requirements.txt  settings.py
config/: layouts.json
entities/: brain.py  config.py  label.py  myCreature.py  simulation_settings.py
entities/creature/: Creature.py
entities/gui/: appstate.py  layouts.py  widgets.py
frameworks_drivers/: config.py
frameworks_drivers/database/: json_reader.py
frameworks_drivers/rendering/: button_img_generator.py  button_instance.py  buttons_handlers.py  pyglet_app.py
interface_adapters/: dict_to_widget.py  gui_renderer.py  ibodyparts.py  ibrain.py  ibraindata.py  icreature.py  ilayout.py  ispace.py  json_reader_interface.py  label_presenter.py  pil_to_pyglet_image.py
saves/: autosave0.save  autosave1.save  autosave2.save
src/: main.cpp
src/entities/: Creature.cpp  Creature.h
src/frameworks/: WxApp.cpp  WxApp.h  WxFrame.cpp  WxFrame.h
src/interfaces/: IRenderer.h
use_cases/brains/: mutation.py  random_brain.py
use_cases/gui/: font_size_from_config.py  layout_manager.py  layout_switch.py  layouts.json  update_label.py
